--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>SOmething in here </h1>
+    <div>
+            <h1>SOmething in here </h1>
+    </div>
+    
 </body>
 </html>
